[tool.poetry]
name = "st_bot"
version = "0.1.0"
description = ""
authors = ["Chris Wood <woodc@us.ibm.com>"]
readme = "README.md"
packages = [{include = "st_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^4.1.0"
streamlit = "^1.32"
langchain = "^0.1.14"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pylint = "^2.17.4"
pylint-pydantic = "^0.1.8"

[tool.bandit]
exclude_dirs = ["tests", "env", "__pycache__", ".pytest_cache"]
skips = ["B104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
